--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
-  <link rel="stylesheet" href="https://flower0619.github.io/crispy-parakeet/_static/alabaster.css” type=”text/css” />
+  <link rel="stylesheet" href="https://flower0619.github.io/crispy-parakeet/CSS/style.css” />
   <script src="https://kit.fontawesome.com/f22ebea2a0.js" crossorigin="anonymous"></script>
 </head>
 <body>
