--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" href="https://flower0619.github.io/crispy-parakeet/css/style.css”>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
